--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Password Generator - Ahmed Mahmoud</title>
+    <title>Password Generator</title>
     <!-- Main CSS -->
     <link rel="stylesheet" href="./assets/styles/main.css" />
     <!-- Font Awsem -->
